Next Release
============
It's been a while, hasn't it?

New Features:
- Added DrPySpy's Codex! Hit the new keybind in the controls menu to bring up
  a high-quality new menu providing all the details on everything you've
  picked up or killed.
- Converted the HUD from SBARINFO to ZScript, allowing for greater flexibility
  on the development side.

Cosmetic Improvements:
- Player sounds and HUD mugshot now take the player's specified gender
  into account! (Thanks DrPySpy!)
- Powerup timers on the HUD are now properly centered, adjusting as powerups are
  gained and run out. (Thanks DrPySpy and TheZombieKiller!)
- Difficulty select screen now has skill descriptions and mugshot. (Thanks BoA Team!)
- Spiderdemon artwork has been updated and re-rendered (Thanks DrPySpy!)
- The Former Lieutenant now wears blue armor, to make him look less like his
  chaingun wielding siblings (DrPySpy did a lot on this update just FYI)
- The Shield Wall's sprites have been redrawn to be less screenshot-rippy.
- The Lightning Gun's stun bomb has been been given an aesthetic overhaul.
- Fiend's sprite offsets are considerably less whacky.
- Additional gibbing sound variety added.
- The 100% kills/items/secrets messages will now try not to overlap each other
  when triggered in rapid succession (ie. MAP07). They'll now try and wait
  their turn and trigger one after the other.
- Imported Doom 2 Minor Sprite Fixing Project assets for the following monsters:
  Arachnotron, Arch-Vile, Mancubus, Pain Elemental and Revenant
- Light-Amp Visors now have new sprites.
- Phantoms now have unique sounds.

Code Changes:
- The BFG's tendrils now properly reward kills and points to the appropriate
  player, rather than just Player 1. (Thanks DrPySpy!)
- The Tesla Rocket will no longer fry the player who fired it if they're in the
  way. It also rewards kills and points properly, ala the BFG fix above.
- The Lightning Gun's standard attack now has a very slight chance of causing